[package]
name = "laser-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
anyhow = "1"
bevy_math = { version = "0.17", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
